# Automated-feedback-sentiment-analysis

./: .env.template  CHANGELOG.md  DATA_README.md  LEGACY_NOTES.md  Makefile  README.md  SECURITY.md  data_cleaning.ipynb  data_cleaning.py  dockerfile  progress-log.md  pyproject.toml  requirements.txt  sample.ipynb  test_feedback_ci.py
.github/workflows/: ci.yml
data/: bench (2).csv  data_info
docs/: DineshKumarSammeta_AutomatedFeedbackSentiment_A-L_2025-09-09.docx
metrics/: metrics.csv
src/sentiment_pipeline/: analysis.py  api.py  config.py  routes.py
